--- a/ass1.html
+++ b/ass1.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jashveer</title>
 </head>
 <body>
-    <script>
-        const greetings = ['Happy Birthday!','Merry Christmas my love','A happy Christmas to all the familly','You\'re all i want for Christmas','Get well soon'];
-       
-        for(greet of greetings){
-        if(greet.includes("Christmas")){
-            document.write(greet)
-        }
-    }
-
-    </script>
+    <h1>Jashveer</h1>
 </body>
 </html>
